--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,6 @@
 spring.application.name=url_shortener
 #server.port=8081
+
+spring.datasource.url = jdbc:postgresql://localhost:5432/url_shortener
+spring.datasource.username = postgres
+spring.datasource.password = postgres
