--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,12 @@
 spring.application.name=url_shortener
 #server.port=8081
 
-spring.datasource.url = jdbc:postgresql://localhost:5432/url_shortener
+spring.datasource.url = jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username = postgres
 spring.datasource.password = postgres
+
+# for creating tables from objects
+#spring.jpa.hibernate.ddl-auto=update
+
+# for creating tables from sql scripts
+spring.sql.init.mode=always   
