--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,4 +9,4 @@ spring.datasource.password = postgres
 #spring.jpa.hibernate.ddl-auto=update
 
 # for creating tables from sql scripts
-spring.sql.init.mode=always   
+#spring.sql.init.mode=always
