--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.application.name=url_shortener
 #server.port=8081
 
+spring.docker.compose.lifecycle-management=start_only
 spring.datasource.url = jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username = postgres
 spring.datasource.password = postgres
@@ -10,3 +11,5 @@ spring.datasource.password = postgres
 
 # for creating tables from sql scripts
 #spring.sql.init.mode=always
+
+spring.jpa.show-sql=true
