feat: implement EntityMapper and update HomeController to use DTOs for short URLs

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,6 @@ spring.datasource.password = postgres
 #spring.sql.init.mode=always
 
 spring.jpa.show-sql=true
+
+#if true causes n+1 queries problem, recommended to be false
+spring.jpa.open-in-view=false
