--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,9 @@
 spring.application.name=url_shortener
 #server.port=8081
 
+# uses docker-compose to start the database
 spring.docker.compose.lifecycle-management=start_only
+
 spring.datasource.url = jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username = postgres
 spring.datasource.password = postgres
@@ -12,6 +14,7 @@ spring.datasource.password = postgres
 # for creating tables from sql scripts
 #spring.sql.init.mode=always
 
+# display sql queries in console
 spring.jpa.show-sql=true
 
 #if true causes n+1 queries problem, recommended to be false
