feat: add application properties for URL shortening configuration and implement URL existence validation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,11 @@
 spring.application.name=url_shortener
 #server.port=8081
 
+## App Configuration
+app.base-url=http://localhost:8080
+app.default-expiration-days=30
+app.validation-enabled=true
+
 # uses docker-compose to start the database
 spring.docker.compose.lifecycle-management=start_only
 
